# aws-ai-infra-helper

./: .gitignore  README.md  TROUBLE_SHOOTING.md  prepare-datasets.py  pyproject.toml
benchmark/: 01_env_check.sh  02_prepare_container.sh  02_prepare_environment.sh  03_run_basic.sh  04_run_aws_optimized.sh  CUDA_GRAPH_NOTES.md  README.md  env.sh  env_check.sh  fix_nccl_setup.sh
benchmark/25.11/: 01_prepare_environment.sh  env.sh  (+2 more)
deepspeed/: .dockerignore  Dockerfile  README.md  ds_config.json  requirements.txt  setup-pyxis.sh  train-pyxis.sbatch  train-qwen3-0-6b-singlenode.sh  train-qwen3-0-6b.sbatch
eks/: FEATURES.md  README.md
fsdp/: README.md  fsdp-guide-ko.md  fsdp-train-single-gpu.sbatch  fsdp-train.sbatch  pyproject.toml  train-fsdp-singlegpu.sbatch  train-fsdp.sbatch
fsdp2/: .dockerignore  Dockerfile  README.md  setup-pyxis.sh  train-fsdp2-singlenode.sh  train-fsdp2.sbatch  train-pyxis.sbatch
lightning/: .dockerignore  Dockerfile  README.md  run.sh  run_fabric.sh  setup-pyxis.sh  train-pyxis.sbatch  train.py  train.sbatch  train_fabric.py  train_fabric.sbatch
megatron/: README.md  megatron-lm-eks-guide-ko.md  megatron-lm-guide-ko.md
observability/: run-observability.sh
scripts/: check-fsx.sh  check-munged.sh  check-pyxis-enroot.sh  create-dra.sh  export-stack-outputs.sh  fix-cuda-version.sh  generate-nccl-test.sh  hyperpod-connect.sh  hyperpod-ssh.sh  install-nccl-efa.sh  install-pyxis-enroot.sh  move_docker_to_nvme.sh
torchtitan/: README.md  download_tokenizers.sh  run_train.sh  torchtitan-guide-ko.md  torchtitan-multinode.sbatch  train.sbatch
(+125 files in other folders)
