[project]
name = "aws-ai-infra-helper"
version = "1.0.7"
description = "AWS AI Infra helper for SageMaker HyperPod and ParallelCluster"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.4.2",
    "deepspeed>=0.18.3",
    "lightning>=2.6.0",
    "setuptools>=80.9.0",
    "torch==2.9.1",
    "torchaudio==2.9.1",
    "torchvision==0.24.1",
    "transformers==4.57.3",
    "lightning>=2.6.0"
]
