[project]
name = "aws-ai-infra-helper"
version = "1.0.12"
description = "AWS AI Infra helper for SageMaker HyperPod and ParallelCluster"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.8.4",
    "deepspeed>=0.18.8",
    "lightning>=2.6.1",
    "setuptools==81.0.0",
    "torch==2.11.0",
    "torchaudio==2.11.0",
    "torchvision==0.26.0",
    "transformers==5.3.0",
    "lightning>=2.6.1",
    "torchdata==0.11.0",
    "tensorboard>=2.20.0",
    "wandb>=0.25.1",
    "fsspec>=2026.2.0",
    "tyro>=1.0.11",
    "tokenizers>=0.22.2",
    "safetensors>=0.7.0",
    "einops>=0.8.2",
    "pillow>=12.1.1",
    "torchao>=0.16.0",
    "flash-linear-attention>=0.4.2",
    "transformer-engine>=2.13.0",
    "torchtitan>=0.2.2",
]
